# rust-clippy

./: CHANGELOG.md  Cargo.toml
clippy_lints/: Cargo.toml
clippy_lints/src/: lib.rs  mem_size_of_integer.rs
tests/ui/: mem_size_of_integer.rs
